#5 Fix: Fixed collapsed sidebar padding, added variables for padding, code-review

--- a/style/colors.css
+++ b/style/colors.css
@@ -6,6 +6,7 @@
   --color-grey: #c6c9cc;
   --color-border: #e8e9eb;
   --color-white: #ffffff;
+  --color-bg: #f8f8f8;
   --color-accent: #304ffd;
   --color-orange: #ff965d;
   --color-red: #fd7972;
