--- a/style/components/sidebar.css
+++ b/style/components/sidebar.css
@@ -1,6 +1,6 @@
 .sidebar {
   --sidebar-padding: 1rem 1.7rem;
-  --color-bg: #f8f8f8;
+  --sidebar-padding-collpased: 1.5rem 0.6rem;
   border-right: 1px solid var(--color-border);
   min-height: 100vh;
   padding: 1rem 0;
@@ -25,48 +25,42 @@
   align-items: center;
   position: relative;
   padding: var(--sidebar-padding);
-  color: var(--color-body-dark);
+  color: var(--color-body-light);
   transition: background-color 0.2s, color 0.2s;
   gap: 1rem;
 }
 
-.sidebar .nav .icon {
+.sidebar .nav .item .icon {
   font-size: 1.3rem;
 }
 
 .sidebar .nav .link-txt {
   margin-right: auto;
+  color: var(--color-heading);
 }
 
-.sidebar .nav .item:hover {
+.sidebar .nav .item:hover,
+.sidebar .nav .item.active {
   background-color: var(--color-bg);
-  color: var(--color-heading);
 }
 
 .sidebar .nav .item .submenu-indicator {
   font-size: 1.2rem;
-  color: var(--color-body-light);
-}
-
-.sidebar .nav .item.active {
-  background-color: var(--color-bg);
-  color: var(--color-heading);
 }
 
 .sidebar .nav .item.active::before {
   content: "";
   position: absolute;
-  top: 0;
-  left: -3px;
+  left: 0px;
   height: 100%;
-  border-left: 7px solid var(--color-accent);
-  border-radius: var(--border-radius-sm);
+  border-left: 4px solid var(--color-accent);
+  border-radius: 0px 6px 6px 0px;
 }
 
 /* -----------Sidebar-collapsed-------------- */
 
 .app.collapsed .sidebar {
-  padding: 1.4rem 0.8rem;
+  padding: var(--sidebar-padding-collpased);
 }
 
 .app.collapsed .sidebar .logo.icon-only {
@@ -102,7 +96,11 @@
   }
 
   .sidebar {
-    padding: 1.4rem 0.6rem;
+    padding: var(--sidebar-padding-collpased);
+  }
+
+  .sidebar .logo.icon-only {
+    display: block;
   }
 
   .sidebar .nav .item {
@@ -113,10 +111,5 @@
   .sidebar .nav .item.active {
     background-color: var(--color-accent);
     color: var(--color-white);
-  }
-
-  .sidebar .logo.icon-only {
-    display: block;
-    padding: 0;
   }
 }
